# nba_analysis_project

./: .dockerignore  .gitattributes  .gitignore  CALIBRATION_OPTIMIZATION_BUG.md  CONTRIBUTING.md  DEPLOYMENT_PLAN.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  Dockerfile.gpu  Dockerfile.streamlit  GPU_SUPPORT_ADDED.md  IMPLEMENTATION_COMPLETE.md  KAGGLE_SETUP.md  README.md  X.csv  conda_path.txt  directory-tree-script.py  directory_tree.txt  docker-compose.gpu.yml  docker-compose.yml  environment.yml  interfaces.md  notes.txt  pyproject.toml  reintegrate_fixed_records.py  spec-list.txt  test_validation_quick.py  test_validation_scraper.py  test_websraping.py
.cspell/: custom-dictionary-workspace.txt
.devcontainer/: COMPARISON.md  README.md  devcontainer.gpu.json  devcontainer.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
configs/: app_config.yaml  app_logging_config.yaml  data_access_config.yaml  data_processing_config.yaml  feature_engineering.yaml  feature_engineering_config.yaml  hyperparameters.json  hyperparameters.yaml  logging_config.yaml  model_config.yaml  model_testing.yaml  model_testing_config.yaml  model_training.yaml  optuna_config.yaml  preprocessing_config.yaml  visualization_config.yaml  webscraping_config.yaml
data/: cleaned_and_combined_data.csv  data_dictionary.csv  dataset-metadata.json  games.csv
docs/: DEPLOYMENT_PLAN.md  DOCKER.md  GAME_ID_CONVERSION_SUMMARY.md  GPU_SUPPORT.md  conformal_predictor_guide.md  future_refactors.md  game_id_conversion_solution.md  readme.md  streamlit_dashboard_reference.md  validation_scraper_implementation.md
hyperparameter_history/: LGBM_history.json  XGBoost_history.json
logs/: model_testing.log.1  model_testing.log.2  model_testing.log.3  webscraping.log.1
noteboooks/: 00_scrape.ipynb  00_scrape_today.ipynb  01_initial_data_exploration.ipynb  02_analytics.ipynb  baseline.ipynb  data_explorer.ipynb  eda.ipynb
scripts/: README.md  analyze_calibration.py  (+16 more)
(+585 files in other folders)
