[project]
name = "nba-analysis-project"
version = "0.1.0"
description = "NBA analysis and prediction project"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "torch>=2.0.0",
    "mlflow>=2.8.0",
    "optuna>=3.4.0",
    "shap>=0.42.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pytz>=2023.3",
    "pyyaml>=6.0.0",
    "dependency-injector>=4.41.0",
    "lxml>=6.0.2",
    "statsmodels>=0.14.0",
    "plotly>=5.18.0",
    "streamlit>=1.38.0",
    "kaggle>=1.7.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_framework", "src/nba_app", "streamlit_app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "ipykernel>=6.29.0",
    "jupyter-core>=5.7.0"
]
